Added utility libraries

--- a/libs/question-randomizer/auth/feature/src/login/login.component.html
+++ b/libs/question-randomizer/auth/feature/src/login/login.component.html
@@ -1,11 +1,4 @@
-<form [formGroup]="myForm">
-  <lib-input-text
-    label="Username"
-    placeholder="Enter username"
-    formControlName="username"
-    [errorMessages]="customErrorMessages"
-  ></lib-input-text>
-
+<form [formGroup]="form">
   <lib-input-text
     label="Email"
     type="email"
@@ -13,42 +6,12 @@
     formControlName="email"
   ></lib-input-text>
 
-  <button type="submit" [disabled]="myForm.invalid">Submit</button>
+  <lib-input-text
+    label="Password"
+    type="password"
+    placeholder="Enter password"
+    formControlName="password"
+  ></lib-input-text>
+
+  <button type="submit" [disabled]="form.invalid">Submit</button>
 </form>
-<!-- <form
-  [formGroup]="form"
-  novalidate
-  autocomplete="off"
-  (submit)="onSubmit()"
-  (keyup.enter)="onSubmit()"
->
-  <div class="app-page__content">
-    <my-projects-nx-shared-crt-ui-controls-form-field
-      label="Email"
-      [required]="true"
-      [control]="form.controls['email']"
-      [isInline]="false"
-      [patternError]="regexErrors.email"
-    >
-      <my-projects-nx-shared-crt-ui-controls-input
-        formControlName="email"
-      ></my-projects-nx-shared-crt-ui-controls-input>
-    </my-projects-nx-shared-crt-ui-controls-form-field>
-
-    <my-projects-nx-shared-crt-ui-controls-form-field
-      label="Password"
-      [required]="true"
-      [control]="form.controls['password']"
-      [isInline]="false"
-      [patternError]="regexErrors.password"
-    >
-      <my-projects-nx-shared-crt-ui-controls-password
-        formControlName="password"
-      ></my-projects-nx-shared-crt-ui-controls-password>
-    </my-projects-nx-shared-crt-ui-controls-form-field>
-  </div>
-
-  <my-projects-nx-shared-ui-buttons-button type="submit"
-    >Log in >></my-projects-nx-shared-ui-buttons-button
-  >
-</form> -->
