Added FIrebase with authentication

--- a/libs/question-randomizer/auth/feature/src/login/login.component.html
+++ b/libs/question-randomizer/auth/feature/src/login/login.component.html
@@ -13,5 +13,7 @@
     formControlName="password"
   ></lib-input-text>
 
-  <button type="submit" [disabled]="form.invalid">Submit</button>
+  <button type="submit" [disabled]="form.invalid" (click)="onSubmit()">
+    Submit
+  </button>
 </form>
