--- a/libs/question-randomizer/dashboard/category/ui/src/edit-category/edit-category.component.html
+++ b/libs/question-randomizer/dashboard/category/ui/src/edit-category/edit-category.component.html
@@ -8,4 +8,11 @@
   <button type="submit" [disabled]="form.invalid" (click)="onSubmit()">
     Submit
   </button>
+  <button
+    type="button"
+    [disabled]="form.invalid"
+    (click)="this.closed.emit(undefined)"
+  >
+    Close
+  </button>
 </form>
