--- a/libs/question-randomizer/dashboard/question/feature/src/list/question-list.component.html
+++ b/libs/question-randomizer/dashboard/question/feature/src/list/question-list.component.html
@@ -1,1 +1,16 @@
 <p>question-list works!</p>
+
+@for (question of questions(); track question) {
+{{ question.name }}
+<button (click)="questionToEdit = question">Edit</button>
+<button (click)="onDelete(question.id)">Delete</button>
+<br />
+}
+
+<button (click)="onAdd()">Add Question</button>
+@if (questionToEdit) {
+<lib-edit-question
+  [question]="questionToEdit"
+  (closed)="onClose($event)"
+></lib-edit-question>
+}
