Moved shared ui library

--- a/libs/question-randomizer/dashboard/question/feature/src/list/question-list.component.html
+++ b/libs/question-randomizer/dashboard/question/feature/src/list/question-list.component.html
@@ -11,6 +11,7 @@
 @if (questionToEdit) {
 <lib-edit-question
   [question]="questionToEdit"
+  [categoryList]="categoryListOptions()"
   (closed)="onClose($event)"
 ></lib-edit-question>
 }
