Separated concerns of auth module

--- a/libs/question-randomizer/dashboard/shell/src/dashboard-shell.component.html
+++ b/libs/question-randomizer/dashboard/shell/src/dashboard-shell.component.html
@@ -11,6 +11,7 @@
         <li><a [routerLink]="['categories']">Categories</a></li>
         <li><a [routerLink]="['qualifications']">Qualifications</a></li>
         <li><a [routerLink]="['interview']">Interview</a></li>
+        <li><button (click)="onSignOut()">Sign out</button></li>
       </ul>
     </nav>
   </aside>
