Update current question after adding or deleting Category from Randomization

--- a/libs/question-randomizer/dashboard/randomization/shell/src/randomization-shell.component.html
+++ b/libs/question-randomizer/dashboard/randomization/shell/src/randomization-shell.component.html
@@ -22,3 +22,4 @@ categoryOptionItem.value) {
 } @else {
 <p>No questions to display</p>
 } }
+<button (click)="onNextQuestion()">Next question</button>
