--- a/libs/question-randomizer/dashboard/randomization/shell/src/randomization-shell.component.html
+++ b/libs/question-randomizer/dashboard/randomization/shell/src/randomization-shell.component.html
@@ -8,7 +8,9 @@ categoryOptionItem.value) {
   type="checkbox"
   [id]="categoryOptionItem.value"
   [checked]="selectedCategoryIdList().includes(categoryOptionItem.value)"
-  (change)="onCheckboxChange($event, categoryOptionItem.value)"
+  (change)="
+    onCheckboxChange($event, categoryOptionItem.value, randomization.id)
+  "
 />
 <label [for]="categoryOptionItem.value">
   {{ categoryOptionItem.label }}
@@ -21,5 +23,10 @@ categoryOptionItem.value) {
 <p>{{ question.answer }}</p>
 } @else {
 <p>No questions to display</p>
-} }
-<button (click)="onNextQuestion()">Next question</button>
+}
+<button (click)="onNextQuestion(randomization.id)">Next question</button>
+<button (click)="onPreviousQuestion(randomization.id)">
+  Previous question
+</button>
+<button (click)="onReset(randomization.id)">Reset</button>
+}
