Added library for styles with 7-1 structure

--- a/libs/question-randomizer/dashboard/randomization/shell/src/randomization-shell.component.html
+++ b/libs/question-randomizer/dashboard/randomization/shell/src/randomization-shell.component.html
@@ -28,5 +28,5 @@ categoryOptionItem.value) {
   Previous question
 </button>
 <button (click)="onNextQuestion(randomization.id)">Next question</button>
-<button (click)="onReset(randomization.id)">Reset</button>
+<br /><button (click)="onReset(randomization.id)">Reset</button>
 }
