--- a/libs/question-randomizer/dashboard/question/ui/src/edit-question/edit-question.component.html
+++ b/libs/question-randomizer/dashboard/question/ui/src/edit-question/edit-question.component.html
@@ -35,3 +35,7 @@
   </button>
   <button type="button" (click)="this.closed.emit(undefined)">Close</button>
 </form>
+<quill-editor
+  [placeholder]="placeholder"
+  (onContentChanged)="onContentChanged($event)"
+></quill-editor>
