--- a/libs/shared/styles/src/styles/base/_base.scss
+++ b/libs/shared/styles/src/styles/base/_base.scss
@@ -1,4 +1,9 @@
-html,
+html {
+  height: 100%;
+  font-size: 62.5%;
+}
 body {
   height: 100%;
+  background: var(--background-color);
+  color: var(--text-color);
 }
