--- a/libs/shared/styles/src/styles/abstracts/_variables.scss
+++ b/libs/shared/styles/src/styles/abstracts/_variables.scss
@@ -1,3 +1,5 @@
-$primary-color: #007bff;
-$font-stack: 'Helvetica Neue', sans-serif;
+$font-family: 'Helvetica Neue', sans-serif;
+$line-height: 1.6;
+$font-size: 1.6rem;
+
 $border-radius: 0.5rem;
