--- a/libs/shared/styles/src/styles/base/_typography.scss
+++ b/libs/shared/styles/src/styles/base/_typography.scss
@@ -1,6 +1,7 @@
 @use '../abstracts/variables' as *;
 
 body {
-  font-family: $font-stack;
-  line-height: 1.6;
+  font-family: $font-family;
+  font-size: $font-size;
+  line-height: $line-height;
 }
