--- a/libs/shared/styles/src/styles/components/_button.scss
+++ b/libs/shared/styles/src/styles/components/_button.scss
@@ -1,8 +1,17 @@
 @use '../abstracts/variables' as *;
 
 .button {
+  background-color: var(--primary-color);
+  color: var(--white);
   padding: 0.5rem 1rem;
-  background-color: $primary-color;
-  border-radius: $border-radius;
-  font-family: $font-stack;
+  border: none;
+  border-radius: 0.25rem;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+
+  // color for that is not yet available
+  // &:hover {
+  //   background-color: var(--primary-color-dark);
+  // }
 }
