--- a/libs/shared/styles/src/styles/components/_card.scss
+++ b/libs/shared/styles/src/styles/components/_card.scss
@@ -1,7 +1,7 @@
-@use '../abstracts/variables' as *;
-
 .card {
-  border: 1px solid #ccc;
+  background-color: var(--background-color);
+  color: var(--text-color);
   padding: 1rem;
-  border-radius: $border-radius;
+  border-radius: 0.5rem;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
