--- a/libs/shared/styles/src/styles/layout/_header.scss
+++ b/libs/shared/styles/src/styles/layout/_header.scss
@@ -1,7 +1,5 @@
-@use '../abstracts/variables' as *;
-
 header {
-  background: $primary-color;
+  background: var(--primary-color);
   color: white;
   padding: 1rem;
 }
