--- a/libs/shared/styles/src/styles/themes/_dark.scss
+++ b/libs/shared/styles/src/styles/themes/_dark.scss
@@ -1,5 +1,24 @@
-.dark-theme {
-  --primary-color: #222;
-  background-color: #121212;
-  color: white;
+@use '../abstracts/variables' as *;
+
+body.dark-theme {
+  --primary-color: #f5d938;
+  --secondary-color: #ffffff;
+
+  --background-color: #121212;
+  --card-bg-color: #1e1e1e;
+  --border-color: #333333;
+
+  --text-color: #f5f5f5;
+  --muted-text: #aaaaaa;
+
+  --success-color: #b6e270;
+  --warning-color: #fbe86b;
+  --danger-color: #ff6b4a;
+
+  --bar-color: #f5f5f5;
+
+  --white: #ffffff;
+  --black: #000000;
+  --gray-100: #2c2c2c;
+  --gray-900: #f5f5f5;
 }
