--- a/libs/shared/styles/src/styles/abstracts/_variables.scss
+++ b/libs/shared/styles/src/styles/abstracts/_variables.scss
@@ -1,5 +1,5 @@
-$font-family: 'Helvetica Neue', sans-serif;
+$font-family: 'Roboto', sans-serif;
 $line-height: 1.6;
-$font-size: 1.6rem;
+$font-size: 1rem;
 
 $border-radius: 0.5rem;
