--- a/libs/shared/styles/src/styles/layout/_footer.scss
+++ b/libs/shared/styles/src/styles/layout/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-  background: #f1f1f1;
-  padding: 1rem;
-  text-align: center;
+  // background: #f1f1f1;
+  // padding: 1rem;
+  // text-align: center;
 }
