--- a/libs/shared/styles/src/styles/layout/_header.scss
+++ b/libs/shared/styles/src/styles/layout/_header.scss
@@ -1,5 +1,5 @@
 header {
-  background: var(--primary-color);
-  color: white;
-  padding: 1rem;
+  // background: var(--primary-color);
+  // color: white;
+  // padding: 1rem;
 }
