--- a/libs/question-randomizer/dashboard/shell/src/ui/sidebar/dashboard-sidebar.component.html
+++ b/libs/question-randomizer/dashboard/shell/src/ui/sidebar/dashboard-sidebar.component.html
@@ -5,8 +5,8 @@
 >
   <!-- <lib-button-toggle value="dark">Dark</lib-button-toggle>
   <lib-button-toggle value="light">Light</lib-button-toggle> -->
-  <lib-button-toggle value="dark">Dark</lib-button-toggle>
-  <lib-button-toggle value="light">Light</lib-button-toggle>
+  <lib-button-toggle value="dark-theme">Dark</lib-button-toggle>
+  <lib-button-toggle value="light-theme">Light</lib-button-toggle>
 </lib-button-toggle-group>
 <!-- <button class="general-btn">General</button>
 <button class="project-btn">Project</button> -->
