--- a/libs/shared/styles/src/styles/themes/_dark.scss
+++ b/libs/shared/styles/src/styles/themes/_dark.scss
@@ -1,24 +1,25 @@
-@use '../abstracts/variables' as *;
-
 body.dark-theme {
-  --primary-color: #f5d938;
+  --primary-color: #eddf64;
   --secondary-color: #ffffff;
 
-  --background-color: #121212;
-  --card-bg-color: #1e1e1e;
-  --border-color: #333333;
+  --success-color: #b9e14c;
+  --warning-color: #eddf64;
+  --danger-color: #f58a48;
 
+  --background-color: #121212;
+  --border-color: #2d2d2d;
   --text-color: #f5f5f5;
+
+  --bar-color: #eeeeee;
   --muted-text: #aaaaaa;
 
-  --success-color: #b6e270;
-  --warning-color: #fbe86b;
-  --danger-color: #ff6b4a;
+  --white: #000000;
+  --black: #ffffff;
 
-  --bar-color: #f5f5f5;
-
-  --white: #ffffff;
-  --black: #000000;
-  --gray-100: #2c2c2c;
-  --gray-900: #f5f5f5;
+  --gray-100: #1e1e1e;
+  --gray-200: #2a2a2a;
+  --gray-300: #333333;
+  --gray-400: #444444;
+  --gray-500: #555555;
+  --gray-600: #777777;
 }
