--- a/libs/question-randomizer/dashboard/shell/src/ui/sidebar/dashboard-sidebar.component.scss
+++ b/libs/question-randomizer/dashboard/shell/src/ui/sidebar/dashboard-sidebar.component.scss
@@ -1,3 +1,35 @@
 :host {
-    padding: 1.6rem;
+  padding: 1.5rem 1rem;
+}
+
+.sidebar-nav {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  background-color: var(--gray-300);
+
+  .nav-item {
+    display: flex;
+    align-items: center;
+    padding: 0.5rem 1rem;
+    border-radius: 3px;
+    color: var(--gray-600);
+    text-decoration: none;
+    transition: all 0.2s;
+
+    i.icon {
+      margin-right: 0.75rem;
+      font-size: 1.2rem;
+    }
+
+    &:hover {
+      background-color: var(--gray-200);
+    }
+
+    &.active {
+      background-color: var(--gray-200);
+      color: var(--text-color);
+      font-weight: 500;
+    }
+  }
 }
