--- a/libs/question-randomizer/dashboard/shell/src/dashboard-shell.component.html
+++ b/libs/question-randomizer/dashboard/shell/src/dashboard-shell.component.html
@@ -1,4 +1,5 @@
 <div class="layout">
+  <lib-dashboard-navigation-bar></lib-dashboard-navigation-bar>
   <lib-dashboard-sidebar
     [currentTheme]="currentTheme()"
     (changeTheme)="onChangeTheme($event)"
@@ -9,5 +10,5 @@
     <div class="content">
       <router-outlet></router-outlet>
     </div>
-</div>
+  </div>
 </div>
