--- a/libs/shared/styles/src/styles/base/_typography.scss
+++ b/libs/shared/styles/src/styles/base/_typography.scss
@@ -3,28 +3,28 @@
 body {
   font-family: $font-family;
   font-size: $font-size;
-  line-height: $line-height;
+  // line-height: $line-height;
 }
 
 h1,
 .h1 {
   font-size: 2rem;
   font-weight: 700;
-  margin-bottom: 1rem;
+  line-height: 2rem;
 }
 
 h2,
 .h2 {
   font-size: 1.5rem;
   font-weight: 600;
-  margin-bottom: 0.75rem;
+  line-height: 1.5rem;
 }
 
 h3,
 .h3 {
   font-size: 1.25rem;
   font-weight: 600;
-  margin-bottom: 0.5rem;
+  line-height: 1.25rem;
 }
 
 p,
