--- a/libs/question-randomizer/dashboard/shell/src/ui/sidebar/dashboard-sidebar.component.scss
+++ b/libs/question-randomizer/dashboard/shell/src/ui/sidebar/dashboard-sidebar.component.scss
@@ -17,9 +17,9 @@
     text-decoration: none;
     transition: all 0.2s;
 
-    i.icon {
+    svg-icon {
       margin-right: 0.75rem;
-      font-size: 1.2rem;
+      display: flex;
     }
 
     &:hover {
