--- a/libs/question-randomizer/dashboard/shell/src/dashboard-shell.component.scss
+++ b/libs/question-randomizer/dashboard/shell/src/dashboard-shell.component.scss
@@ -12,7 +12,7 @@ lib-dashboard-navigation-bar {
 lib-dashboard-sidebar {
   min-width: 16rem;
   max-width: 16rem;
-  background-color: var(--gray-300); /* Match light grey from image */
+  background-color: var(--gray-300);
 }
 
 .main {
@@ -23,7 +23,6 @@ lib-dashboard-sidebar {
 }
 
 lib-dashboard-header {
-  // height: 4rem;
   border-bottom: 2px solid var(--secondary-color);
 }
 
@@ -31,57 +30,3 @@ lib-dashboard-header {
   flex: 1;
   padding: 20px;
 }
-
-// :host {
-//   margin: 0;
-//   font-family: Arial, sans-serif;
-//   background-color: #f5f5f5;
-// }
-// .container {
-//   display: flex;
-//   height: 100vh;
-// }
-// .sidebar {
-//   width: 250px;
-//   background: #e0e0e0;
-//   padding: 20px;
-// }
-// .sidebar h1 {
-//   font-size: 20px;
-//   font-weight: bold;
-//   margin-bottom: 20px;
-// }
-// .sidebar button {
-//   padding: 10px 15px;
-//   margin-right: 10px;
-//   border: none;
-//   cursor: pointer;
-//   font-weight: bold;
-// }
-// .sidebar .general-btn {
-//   background: black;
-//   color: white;
-// }
-// .sidebar .project-btn {
-//   background: #d3d3d3;
-// }
-// .nav ul {
-//   list-style: none;
-//   padding: 0;
-// }
-// .nav li {
-//   padding: 8px 0;
-//   font-size: 16px;
-// }
-// .main-content {
-//   flex-grow: 1;
-//   padding: 20px;
-// }
-// .main-content h1 {
-//   font-size: 24px;
-//   font-weight: bold;
-// }
-// .divider {
-//   margin-top: 10px;
-//   border-top: 2px solid black;
-// }
