--- a/libs/question-randomizer/dashboard/shell/src/ui/sidebar/dashboard-sidebar.component.scss
+++ b/libs/question-randomizer/dashboard/shell/src/ui/sidebar/dashboard-sidebar.component.scss
@@ -1,17 +1,21 @@
-:host {
-  padding: 1.5rem 1rem;
+header {
+  padding: 1.8rem;
+}
+
+.header {
+  margin-bottom: 32px;
 }
 
 .sidebar-nav {
+  padding: 0 1.2rem;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
   background-color: var(--gray-300);
-
   .nav-item {
     display: flex;
     align-items: center;
-    padding: 0.5rem 1rem;
+    padding: 1rem;
     border-radius: 3px;
     color: var(--gray-600);
     text-decoration: none;
@@ -29,7 +33,7 @@
     &.active {
       background-color: var(--gray-200);
       color: var(--text-color);
-      font-weight: 500;
+      font-weight: 600;
     }
   }
 }
